src/tokenize/snapshots/wyw__tokenize__scanner__test__「甲」.snap
---
source: src/tokenize/scanner.rs
expression: tokens
---
- value: Identifier
  span:
    start: 3
    end: 6
  line: 1
- value: Eof
  span:
    start: 9
    end: 9
  line: 1

