src/tokenize/snapshots/wyw__tokenize__scanner__test__加一以二.snap
---
source: src/tokenize/scanner.rs
expression: tokens
---
- value: Plus
  span:
    start: 0
    end: 3
  line: 1
- value: Number
  span:
    start: 3
    end: 6
  line: 1
- value: PrepositionRight
  span:
    start: 6
    end: 9
  line: 1
- value: Number
  span:
    start: 9
    end: 12
  line: 1
- value: Eof
  span:
    start: 12
    end: 12
  line: 1

